--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "bgmi-archive-frontend",
   "version": "0.1.0",
   "private": true,
+  "dependencies": {
+    "vue-router": "^3.0.1"
+  },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^3.5.0",
