--- a/package.json
+++ b/package.json
@@ -3,11 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "jquery": "^3.3.1",
+    "metro4": "^4.2.39",
+    "vue": "^2.6.10",
     "vue-router": "^3.0.1"
+  },
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-service": "^3.5.0"
+    "@vue/cli-service": "^3.5.3",
+    "vue-template-compiler": "^2.0.0"
   }
 }
