--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "jquery": "^3.3.1",
     "metro4": "^4.2.39",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "web-storage-cache": "^1.0.3"
   },
   "scripts": {
     "serve": "vue-cli-service serve",
