--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "axios": "^0.18.0",
+    "dplayer": "^1.25.0",
     "jquery": "^3.3.1",
     "metro4": "^4.2.39",
     "vue": "^2.6.10",
